--- a/package.json
+++ b/package.json
@@ -5,10 +5,17 @@
   "dependencies": {
     "@babel/plugin-syntax-json-strings": "^7.2.0",
     "antd": "^3.19.3",
+    "axios": "^0.19.0",
+    "koa": "^2.0.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.6",
+    "mysql": "^2.17.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "sequelize": "^5.8.9"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
