--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "koa2-cors": "^2.0.6",
-    "mysql": "^2.17.1",
+    "mysql2": "^1.6.5",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
